# system_monitor

./: .gitignore  CMakeLists.txt  README.md  roadmap.md
include/: CPU.hpp  UI.hpp  memory.hpp
src/: CPU.cpp  UI.cpp  main.cpp  memory.cpp
